--- a/src/app/methodologies/assign-methodology/assign-methodology.component.html
+++ b/src/app/methodologies/assign-methodology/assign-methodology.component.html
@@ -25,12 +25,41 @@
                             <label for="sector">Sector *</label>
                             <p-dropdown name="sector" appendTo="body" [options]="selectedSectors" optionLabel="name"
                                 placeholder="Select .." [(ngModel)]="sector" [showClear]="true" #sec="ngModel"
-                                (ngModelChange)="selectMeth($event)">
+                                (ngModelChange)="selectIndicator($event)">
                             </p-dropdown>
                         </div>
+                        
                     </div>
                 </div>
             </div>
+
+            <div class="p-grid p-fluid col-md-9 col-sm-12">
+                <div class="row p-2">
+                    <div class="col-12 col-md-8">
+
+                   <!--      <div class="p-field">
+                            <label for="indicator">Indicator *</label>
+                            <p-dropdown name="indicator" appendTo="body" [options]="selectedIndicators" optionLabel="name"
+                                placeholder="Select .." [(ngModel)]="indicator" [showClear]="true" #sec="ngModel"
+                                (ngModelChange)="selectMeth($event)">
+                            </p-dropdown>
+                        </div>
+ -->
+
+                     <div class="p-field">
+                            <label for="indicator">Indicator *</label>
+                            <p-multiSelect name="indicator" appendTo="body" [options]="selectedIndicators" optionLabel="name"
+                                placeholder="Select .." [(ngModel)]="selectedIndicators" multiple="true" [showClear]="true" #sec="ngModel"
+                                (ngModelChange)="selectMeth($event)">
+                            </p-multiSelect>
+                          </div> 
+                          
+
+                    </div>
+                </div>
+            </div>
+
+
         </div>
 
     </form>
