--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -732,7 +732,7 @@ div {
 
 .top-panel {
   height: 77px;
-  background: #fff;
+  background:#5393e0 ;
   width: 100%;
   border-bottom: 1px solid #E9ECEF;
 }
