--- a/src/app/methodologies/assign-methodology/assign-methodology.component.html
+++ b/src/app/methodologies/assign-methodology/assign-methodology.component.html
@@ -46,13 +46,26 @@
                         </div>
  -->
 
-                     <div class="p-field">
+                      <div class="p-field">
                             <label for="indicator">Indicator *</label>
-                            <p-multiSelect name="indicator" appendTo="body" [options]="selectedIndicators" optionLabel="name"
+                            <p-multiSelect name="indicator" appendTo="body" [options]="indicatorList" optionLabel="name"
                                 placeholder="Select .." [(ngModel)]="selectedIndicators" multiple="true" [showClear]="true" #sec="ngModel"
                                 (ngModelChange)="selectMeth($event)">
                             </p-multiSelect>
                           </div> 
+
+
+                <!--           <div class="p-field">
+                            <label for="indicator">Indicator *</label>
+                            <p-multiSelect [options]="indicatorList" [(ngModel)]="selectedIndicators" optionLabel="name" 
+                            placeholder="Select Indicator(s) .." multiple="true" [showClear]="true" #sec="ngModel"
+                            (ngModelChange)="selectMeth($event)">
+                          </p-multiSelect>
+                          </div>
+
+ -->
+                         
+
                           
 
                     </div>
@@ -73,8 +86,11 @@
                     <div class="p-field">
                         <label for="nameClimate">Select Methodologie(s) *</label>
                         <p-listbox [options]="methodologyList" [(ngModel)]="selectedMethodSelected"
-                            [metaKeySelection]="false" optionLabel="displayName" [checkbox]="true" [filter]="true"
+                            [metaKeySelection]="false"  [checkbox]="true" [filter]="true"
                             [multiple]="true" [listStyle]="{ 'max-height': '350px' }">
+                            <ng-template let-option pTemplate="item">
+                                {{ option.displayName }} : {{ option.indicator.name }}
+                              </ng-template>
                             <ng-template let-group pTemplate="group">
                                 <div class="p-d-flex p-ai-center">
                                     <span>{{ group.label }}</span>
@@ -87,8 +103,11 @@
                     <div class="p-field">
                         <label for="nameClimate">Selected Methodologie(s)</label>
                         <p-listbox [options]="selectedMethodSelected" [(ngModel)]="selectedMethodSelected"
-                            [metaKeySelection]="false" optionLabel="displayName" [filter]="true" [multiple]="true"
+                            [metaKeySelection]="false"  [filter]="true" [multiple]="true"
                             [readonly]="true" [listStyle]="{ 'max-height': '350px' }">
+                            <ng-template let-option pTemplate="item">
+                                {{ option.displayName }} : {{ option.indicator.name }}
+                              </ng-template>
                             <ng-template let-group pTemplate="group">
                                 <div class="p-d-flex p-ai-center">
                                     <span>{{ group.label }}</span>
