--- a/src/assets/scss/partials/_dashboard.scss
+++ b/src/assets/scss/partials/_dashboard.scss
@@ -5,7 +5,7 @@
 .sidebar {
   width: 250px;
   min-width: 250px;
-  background-color: #fff;
+  background-color: #5393e0;
   color: #cbd5e0;
   position: fixed;
   height: 100%;
@@ -22,7 +22,8 @@
     font-weight: 600;
     color: #e2e8f0;
     font-size: 16px;
-    border-bottom: 1px solid #E9ECEF;
+    border-bottom: 1px solid #5393e0;
+   
 
     img {
       margin-right: 10px;
@@ -72,13 +73,15 @@
 
   &--link {
     padding: 15px 25px;
-    background-color: #fff;
-    color: #8A92A6;
+    background-color: #97ccf7;
+    color: black;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0 12px;
+    margin: 2px 12px;
     transition: background-color 1s; 
+   border-radius: 4px;
+ 
 
     &.selected {
       background-color: #1A4F7B;
