--- a/src/app/country-registry/view-country/view-country.component.html
+++ b/src/app/country-registry/view-country/view-country.component.html
@@ -77,18 +77,18 @@
           </div>
         </div>
   
-        <div class="p-grid p-fluid col-md-9 col-sm-12">
+        <!-- <div class="p-grid p-fluid col-md-9 col-sm-12">
           <div class="row p-2">
             <div class="col-12 col-md-8">
   
   
               <div class="p-field">
-                <label for="AssignSectors">Assign Sectors*</label>
+                <label for="AssignSectors">Assign Sectors*</label> -->
                 <!-- <p-multiSelect name="sectors" #fmodules="ngModel" [options]="sectorList" optionLabel="name" 
                 [(ngModel)]="selectedSectors" (ngModelChange)="selectmod($event)"  [filter]="true" 
                 placeholder="Select Sector">
                 </p-multiSelect> -->
-                <input type="text" name="assignsec" placeholder={{secNames}} readonly class="form-control" />
+                <!-- <input type="text" name="assignsec" placeholder={{secNames}} readonly class="form-control" />
 
                 
                 
@@ -96,7 +96,7 @@
   
             </div>
           </div>
-        </div>
+        </div> -->
   
         <div class="p-grid p-fluid col-md-9 col-sm-12">
           <div class="row p-2">
