--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -128,7 +128,7 @@
             </div> -->
 
 
-            <div
+            <!-- <div
             *ngIf="
                 userRole.role == 1 ||
                 userRole.role == 5 ||
@@ -141,9 +141,9 @@
           >
             <div class=""></div>
             Methodologies
-          </div>
+          </div> -->
 
-          <div
+          <!-- <div
           *ngIf="
               userRole.role == 1 ||
               userRole.role == 5 ||
@@ -156,7 +156,7 @@
         >
           <div class=""></div>
           Assign Methodologies
-        </div>
+        </div> -->
 
 
           <div
