add logo and change type

--- a/src/app/login/set-password/set-password.component.html
+++ b/src/app/login/set-password/set-password.component.html
@@ -15,12 +15,12 @@
       <br/>
       <div class="row mb-8 login-content-wrapper">
         <div class="logo_img_w">
-          <img class="logo_img"
-            src="https://climateactiontransparency.org/wp-content/themes/custom/assets/i/logo/logo_purple.svg"
-            alt="logo" height="45px" style="padding-right: 2%;" (click)="toLanding()" />
           <img class="logo_img active_mod"
-            src="https://climateactiontransparency.org/wp-content/themes/custom/assets/i/logo/logo_text.svg"
-            alt="logo text" height="40px" (click)="toLanding()" />
+                src="https://climateactiontransparency.org/wp-content/themes/custom/assets/i/logo/logo_yellow.svg"
+                alt="logo" height="45px" style="padding-right: 2%; " (click)="toLanding()" />
+                <img class="logo_img active_mod"
+                src="https://climateactiontransparency.org/wp-content/themes/custom/assets/i/logo/logo_text.svg"
+                alt="logo text" height="40px" (click)="toLanding()" />
         </div>
       </div>
     <br/>
