--- a/src/app/user/user-form/user-form.component.html
+++ b/src/app/user/user-form/user-form.component.html
@@ -87,7 +87,7 @@
             <div class="p-field">
               <label for="email">Email *</label>
 
-              <input [disabled]="!isNewUser" type="email" name="email" class="form-control" [(ngModel)]="user.email"
+              <input [disabled]="!isNewUser" type="email" name="email" class="form-control" [(ngModel)]="user.email" (ngModelChange)="onEmailChange($event)" 
                 #femail="ngModel" placeholder="Enter the email" pattern="[\w-\.]+@([\w-]+\.)+[\w-]{1,20}$" required />
               <p class="info-message text-danger" *ngIf="
                   (!user.email || femail.invalid) &&
@@ -97,6 +97,10 @@
               </p>
               <p class="info-message text-danger" *ngIf="isEmailUsed">
                 Email address is already in use, please use a diffrent email
+                address to add a new user.
+              </p>
+              <p class="info-message text-danger" *ngIf="isEmailCountryUsed">
+                Email address is already in use country portal, please use a diffrent email
                 address to add a new user.
               </p>
             </div>
@@ -186,7 +190,7 @@
         </button>
 
         <button [disabled]="
-            coreatingUser || user.canNotDelete == true || isDisableCuzCountry
+            coreatingUser || user.canNotDelete == true || isDisableCuzCountry || isEmailUsed ||isEmailCountryUsed
           " class="btn btn-primary btn-block text-uppercase ml-10" type="submit">
           Save
         </button>
