--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -83,7 +83,7 @@
     <h6 class="mb-20">Something went wrong</h6>
     <p>
       Please try again and see how it goes, if that doesn’t work again, please
-      do send us an email at support@nutmeg.com and our team will look at the
+      do send us an email at support&#64;nutmeg.com and our team will look at the
       issue ASAP
     </p>
     <a class="btn btn-primary mt-15" href="/home">PROCEED TO DASHBOARD</a>
