--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
               routerLinkActive="selected"
             >
               <div class=""></div>
-              Institution
+              Institutions
             </div>
 
 
@@ -99,20 +99,6 @@
 
 
 
-          <div
-          *ngIf="
-                userRole.role == 1 ||
-                userRole.role == 5 ||
-                userRole.role == 3 ||
-                userRole.role == 4 
-              "
-          class="sidebar-items--link align-items-start"
-          [routerLink]="['/learning-material']"
-          routerLinkActive="selected"
-        >
-          <div class=""></div>
-          Learning Material
-        </div>
 
 
 
