--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
               routerLinkActive="selected"
             >
               <div class=""></div>
-              Country Registry
+              Country registry
             </div>
 
             <div
