--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -6,7 +6,7 @@
         <div class="col-md-4">
           <div class="p-inputgroup pt-4">
             <input
-              placeholder="Type Your Keyword"
+              placeholder="Type your keyword"
               [(ngModel)]="searchBy.text"
               #nameClimate="ngModel"
               type="text"
@@ -29,7 +29,7 @@
         <div class="col-md-4">
           <div class="col-12">
             <div class="p-field">
-              <label for="projStatus">User Type</label>
+              <label for="projStatus">User type</label>
               <p-dropdown
                 name="usertype"
                 [options]="userTypeList"
@@ -102,12 +102,12 @@
   
             <tr>
               
-              <th>NAME</th>
-              <th>USER TYPE</th>
-              <th>ACTIVITY</th>
-              <th>ACTION</th>
-              <th>DATE</th>
-              <th>TIME</th>
+              <th>Name</th>
+              <th>User type</th>
+              <th>Activity</th>
+              <th>Action</th>
+              <th>Date</th>
+              <th>Time</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-activities>
