--- a/src/app/country-registry/add-country/add-country.component.html
+++ b/src/app/country-registry/add-country/add-country.component.html
@@ -1,7 +1,7 @@
 <div class="container pl-20 pr-20">
 
   <div class="mb-12">
-    <h4 class="mt-4"> {{isNewCountry ? "Register a" : "Edit a"}} Country </h4>
+    <h4 class="mt-4"> {{isNewCountry ? "Register a" : "Edit a"}} country </h4>
 
   </div>
   <form #fLogin="ngForm" (ngSubmit)="saveCountry(fLogin)" novalidate>
@@ -14,7 +14,7 @@
                 <div class="col-12 col-md-10">
                   <div class="p-field">
     
-                    <label for="countryName">Country Name*</label>
+                    <label for="countryName">Country name*</label>
                     <p-dropdown *ngIf="isNewCountry" name="cname" [options]="countryList" optionLabel="name"
                       [(ngModel)]="cou" (ngModelChange)="onStatusChange($event)" [showClear]="true"
                       placeholder={{selectCountry}}>
@@ -40,7 +40,7 @@
                 <div class="row p-2">
                   <div class="col-12 col-md-10">
                     <div class="p-field">
-                      <label for="projApprovelStatus" class="col-md-">Country Flag *    </label><label> </label>
+                      <label for="projApprovelStatus" class="col-md-">Country flag *    </label><label> </label>
                       <ng-container *ngIf="cou.flagPath != null || cou.flagPath !== ''; else elseBlock " class="form-control">
                         <img src="{{cou.flagPath}}" alt="img" style="height: 150px; width: 250px;">
                       </ng-container>
@@ -80,7 +80,7 @@
                   <label for="AssignSectors">Assign tools*</label>
                   <p-multiSelect appendTo="body" name="modules" #fmodules="ngModel" [options]="accessmodules" optionLabel="name"
                     [(ngModel)]="selectedModules" (ngModelChange)="selectmod($event)" [filter]="true"
-                    placeholder="select modules">
+                    placeholder="Select modules">
                   </p-multiSelect>
                 </div>
     
@@ -96,7 +96,7 @@
       
                   <div class="p-field">
       
-                    <button pButton p-2  class="btn btn-primary btn-block text-uppercase" type='button'label="Save" type="submit"  ></button>
+                    <button pButton p-2  class="btn btn-primary btn-block" type='button'label="Save" type="submit"  ></button>
       
                   </div>
       
@@ -109,7 +109,7 @@
       
                   <div class="p-field" *ngIf="!isNewCountry">
       
-                    <button pButton pRipple p-2  class="btn btn-primary btn-block text-uppercase" type='button'
+                    <button pButton pRipple p-2  class="btn btn-primary btn-block" type='button'
                     (click)="activateCountry(cou)">
                     {{cstaus == 0 ? "Activate" : "Deactivate"}}
                   </button>
