--- a/src/app/country-registry/country-registry.component.html
+++ b/src/app/country-registry/country-registry.component.html
@@ -1,5 +1,5 @@
 <div class="container pl-20 pr-20">
-    <h4 class="mt-4">Country Registry</h4>
+    <h4 class="mt-4">Country registry</h4>
     <div class="p-grid p-fluid card">
 
 
