--- a/src/app/institutions/institutions.component.html
+++ b/src/app/institutions/institutions.component.html
@@ -15,7 +15,7 @@
       <div class="col-md-4">
         <label for="namemethodology">Keyword</label>
         <div class="p-inputgroup pb-4">
-          <input placeholder="Type Your Keyword" [(ngModel)]="searchBy.text" #namemethodology="ngModel" type="text"
+          <input placeholder="Type your keyword" [(ngModel)]="searchBy.text" #namemethodology="ngModel" type="text"
             name="namemethodology" class="p-inputtext" pInputText />
           <button type="button" pButton pRipple label="Search" (click)="onSearch()"></button>
         </div>
@@ -37,7 +37,7 @@
             </th>
 
             <th>Name</th>
-            <th>Assigned Countries</th>
+            <th>Assigned countries</th>
             <th>Address</th>
             <th>Admin</th>
             <th>Status</th>
