--- a/src/app/learning-material/learning-material.component.html
+++ b/src/app/learning-material/learning-material.component.html
@@ -16,7 +16,7 @@
 
       <div class="col-md-6">
         <div class="p-inputgroup pt-4">
-          <input placeholder="Type Your Keyword" [(ngModel)]="searchBy.text" #nameClimate="ngModel" type="text"
+          <input placeholder="Type your keyword" [(ngModel)]="searchBy.text" #nameClimate="ngModel" type="text"
             name="nameClimate" class="p-inputtext" pInputText />
           <button type="button" pButton pRipple label="Search" (click)="onSearch()"></button>
         </div>
