--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -22,7 +22,7 @@
           (emailInput.errors?.['required'] && isSubmitLogin)
       }"
       required
-      placeholder="Enter the Email Address"
+      placeholder="Enter the email address"
     />
     <p
       class="info-message text-danger"
@@ -51,7 +51,7 @@
     with us.
   </p>
   <button
-    class="btn btn-primary btn-block text-uppercase btn-lg mt-35"
+    class="btn btn-primary btn-block  btn-lg mt-35"
     type="submit"
     (click)="resetPassword()"
   >
