--- a/src/app/login/set-password/set-password.component.html
+++ b/src/app/login/set-password/set-password.component.html
@@ -25,8 +25,8 @@
       </div>
     <br/>
     <br/>
-    <div class="d-flex justify-content-center">
-      <h4>Reset Your Password</h4>
+    <div class="d-flex justify-content-left">
+      <h4>Reset your password</h4>
     </div>
     <br />
     <p class="mb-35">Enter details below to <span href="javascript:void(0)" class="text-info font-weight-bold">reset the
@@ -66,12 +66,12 @@
   
       <div class="form-group">
         <div class="p-field col-12 col-md-8">
-          <label class="font-weight-bold">New Password</label>
+          <label class="font-weight-bold">New password</label>
           <span class="p-input-icon-right" style="width: 400px">
             <i *ngIf="!isPasswordType" class="pi pi-eye pass-icon" (click)="togglePasswordText()"></i>
             <i *ngIf="isPasswordType" class="pi pi-eye-slash pass-icon" (click)="togglePasswordText()"></i>
             <input id="password" required pInputText [type]="isPasswordType?'password':'text'" #password="ngModel" name="password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,}$"
-              [(ngModel)]="resetPasswordDto.password" placeholder="New Password" class="form-control">
+              [(ngModel)]="resetPasswordDto.password" placeholder="New password" class="form-control">
           </span>
         </div>    
         <p class="info-message text-danger" *ngIf="(password.errors?.['pattern'])">
@@ -87,12 +87,12 @@
   
       <div class="form-group">
         <div class="p-field col-12 col-md-8">
-          <label class="font-weight-bold">Confirm Password</label>
+          <label class="font-weight-bold">Confirm password</label>
           <span class="p-input-icon-right" style="width: 400px">
             <i *ngIf="!isConfirmPasswordType" class="pi pi-eye pass-icon" (click)="toggleConfirmPasswordText()"></i>
             <i *ngIf="isConfirmPasswordType" class="pi pi-eye-slash pass-icon" (click)="toggleConfirmPasswordText()"></i>
             <input required pInputText [type]="isConfirmPasswordType?'password':'text'" #fcpassword="ngModel"
-              name="cpassword" [(ngModel)]="passwordConfirm" placeholder="Confirm Password" class="form-control">
+              name="cpassword" [(ngModel)]="passwordConfirm" placeholder="Confirm password" class="form-control">
           </span>
   
         </div>
@@ -109,7 +109,7 @@
   
       </div>
   
-      <button class="btn btn-primary btn-block text-uppercase btn-lg mt-35" (click)="clickResetPassword()"
+      <button class="btn btn-primary btn-block  btn-lg mt-35" (click)="clickResetPassword()"
       [disabled]="(passwordConfirm !=  resetPasswordDto.password) || (password.errors?.['pattern']) ">
         Reset Password</button>
     </form>
