--- a/src/app/methodologies/methodologies.component.html
+++ b/src/app/methodologies/methodologies.component.html
@@ -43,7 +43,7 @@
   
         <div class="p-inputgroup pb-4">
           <input
-            placeholder="Type Your Keyword"
+            placeholder="Type your keyword"
             [(ngModel)]="searchBy.text"
             #namemethodology="ngModel"
             type="text"
