--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
               routerLinkActive="selected"
             >
               <div class=""></div>
-              Country Registry
+              Country registry
             </div>
 
             <div
@@ -126,7 +126,7 @@
         userRole.role == 4 " class="sidebar-items--link align-items-start " [routerLink]="['/reset-password']"
           routerLinkActive="selected">
           <div class=""></div>
-          Reset Your Password
+          Reset your password
           <i class="pi pi-cog pass-icon" (click)="['/reset-password']"></i>
         </div>
 
