--- a/src/app/climate-action/climate-action/climate-action.component.html
+++ b/src/app/climate-action/climate-action/climate-action.component.html
@@ -7,7 +7,7 @@
       <div class="col-md-4">
         <div class="p-inputgroup pt-4">
           <input
-            placeholder="Type Your Keyword"
+            placeholder="Type your keyword"
             [(ngModel)]="searchBy.text"
             #nameClimate="ngModel"
             type="text"
