--- a/src/app/country-registry/view-country/view-country.component.html
+++ b/src/app/country-registry/view-country/view-country.component.html
@@ -1,7 +1,7 @@
 <div class="container pl-20 pr-20">
 
     <div class="mb-12">
-      <h4 class="mt-4"> {{isNewCountry ? "Register a" : "View a"}} Country </h4>
+      <h4 class="mt-4"> {{isNewCountry ? "Register a" : "View a"}} country </h4>
   
     </div>
   
@@ -14,7 +14,7 @@
             <div class="row p-2">
               <div class="col-12 col-md-8">
                 <div class="p-field">
-                  <label for="countryName">Country Name*</label>
+                  <label for="countryName">Country name*</label>
                    <input type="text" name="assignsec" placeholder={{selectCountry}} readonly class="form-control" />
 
 
@@ -67,7 +67,7 @@
             <div class="col-12 col-md-8">
   
               <div class="p-field" >
-                <label for="AssignSectors">Assign Modules*</label>
+                <label for="AssignSectors">Assign modules*</label>
                 <input type="text" name="assingmod" placeholder={{modNames}} readonly class="form-control"/>
                 
               </div>
@@ -93,14 +93,14 @@
         <div class="d-flex flex-row-reverse mt-2 mb-2">
           <div *ngIf="!isNewCountry">
           <div style="padding-left: 0.2%;">
-            <button p-1 pButton pRipple class="btn btn-primary btn-block text-uppercase" type='button'
+            <button p-1 pButton pRipple class="btn btn-primary btn-block" type='button'
               (click)="activateCountry(cou)">
               {{cstaus == 0 ? "Activate" : "Deactivate"}}
             </button>
           </div>
         </div>
         <div>
-          <button pButton pRipple class="btn btn-primary btn-block text-uppercase" type='button' (click)="onBackClick()">
+          <button pButton pRipple class="btn btn-primary btn-block" type='button' (click)="onBackClick()">
             Back
           </button>
         </div>
