--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -5,7 +5,7 @@
 
 <form #fLogin="ngForm" autocomplete="off">
   <div class="form-group mb-25">
-    <label class="font-weight-bold">Username</label>
+    <label class="font-weight-bold">User name</label>
     <input
       type="email"
       class="form-control"
@@ -18,7 +18,7 @@
           (userName.errors && (userName.touched || userName.dirty)) ||
           (userName.errors?.['required'] && isSubmitLogin)
       }"
-      placeholder="Enter the username"
+      placeholder="Enter the user name"
       required
     />
     <p
@@ -70,7 +70,7 @@
     Invalid credentials
   </p>
   <button
-    class="btn btn-primary btn-block text-uppercase btn-lg"
+    class="btn btn-primary btn-block btn-lg"
     type="submit"
     (click)="login()"
   >
