--- a/src/app/user/user-form/user-form.component.html
+++ b/src/app/user/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <div class="container pl-20 pr-20">
   <div class="mb-12">
-    <h4 style="color: blue">{{ isNewUser ? 'Create' : 'Edit' }} User</h4>
+    <h4 style="color: blue">{{ isNewUser ? 'Create' : 'Edit' }} user</h4>
   </div>
   <form #fLogin="ngForm" (ngSubmit)="saveUser(fLogin)" novalidate>
     <div class="card">
@@ -8,7 +8,7 @@
         <div class="row p-2">
           <div class="col-12 col-md-8">
             <div class="p-field">
-              <label for="contatname">User Type *</label>
+              <label for="contatname">User type *</label>
               <p-dropdown [disabled]="!isNewUser" [options]="userTypes" name="usertype" [(ngModel)]="user.userType"
                 placeholder="Select .." optionLabel="name" #fut="ngModel"
                 (ngModelChange)="utypeid($event)"></p-dropdown>
@@ -28,7 +28,7 @@
         <div class="row p-2">
           <div class="col-12 col-md-8">
             <div class="p-field">
-              <label for="country">Select Country *</label>
+              <label for="country">Select country *</label>
               <p-dropdown name="name" [options]="countryList" [(ngModel)]="user.country" #fname="ngModel"
                 [filter]="true" placeholder="Select .." optionLabel="name"
                 (ngModelChange)="onChangeCountry($event)"></p-dropdown>
@@ -48,7 +48,7 @@
         <div class="row p-2">
           <div class="col-12 col-md-8">
             <div class="p-field">
-              <label for="firstname">First Name *</label>
+              <label for="firstname">First name *</label>
               <input type="text" name="firstname" class="form-control" [(ngModel)]="user.firstName" #ffn="ngModel"
                 placeholder="Enter the first name" required />
               <p class="info-message text-danger" *ngIf="
@@ -66,7 +66,7 @@
         <div class="row p-2">
           <div class="col-12 col-md-8">
             <div class="p-field">
-              <label for="lastname">Last Name *</label>
+              <label for="lastname">Last name *</label>
 
               <input type="text" name="lastname" class="form-control" [(ngModel)]="user.lastName" #fln="ngModel"
                 placeholder="Enter the last name" required />
@@ -112,7 +112,7 @@
         <div class="row p-2">
           <div class="col-12 col-md-8">
             <div class="p-field">
-              <label for="mrvInstitution">MRV Institution *</label>
+              <label for="mrvInstitution">MRV institution *</label>
 
               <input [disabled]="!isNewUser" type="text" name="mrvInstitution" class="form-control"
                 [(ngModel)]="user.mrvInstitution" #fmrvInstitution="ngModel" placeholder="Enter the Institution"
@@ -134,7 +134,7 @@
         <div class="row p-2">
           <div class="col-12 col-md-8">
             <div class="p-field">
-              <label for="institution">Assign Institution *</label>
+              <label for="institution">Assign institution *</label>
               <p-dropdown name="institution" appendTo="body" [options]="institutions" [(ngModel)]="user.institution"
                 #finstitution="ngModel" [filter]="true" placeholder="Select .." optionLabel="name" [showClear]="true"
                 (ngModelChange)="onChangeInstitutioon($event)"></p-dropdown>
@@ -185,18 +185,18 @@
       </div>
 
       <div class="d-flex flex-row-reverse mt-2 mb-2">
-        <button class="btn btn-primary btn-block text-uppercase ml-10" pRipple (click)="onBackClick()">
+        <button class="btn btn-primary btn-block  ml-10" pRipple (click)="onBackClick()">
           Back
         </button>
 
         <button [disabled]="
             coreatingUser || user.canNotDelete == true || isDisableCuzCountry || isEmailUsed || isEmailCountryUsed 
-          " class="btn btn-primary btn-block text-uppercase ml-10" type="submit">
+          " class="btn btn-primary btn-block  ml-10" type="submit">
           Save
         </button>
 
         <button pButton pRipple *ngIf="!isNewUser" [disabled]="user.canNotDelete == true"
-          class="btn btn-primary btn-block text-uppercase ml-10" type="button" (click)="onDeleteClick()">
+          class="btn btn-primary btn-block ml-10" type="button" (click)="onDeleteClick()">
           {{ user.status == 0 ? 'Deactivate' : 'Activate' }}
         </button>
       </div>
