--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4 class="mt-4">Manage Users</h4>
+  <h4 class="mt-4">Users</h4>
   <div class="p-grid p-fluid card">
     <div class="row">
       <div class="col-4">
@@ -13,7 +13,7 @@
           "
         >
           <div class="col-4 d-flex align-items-center">
-            <label class="font-weight-bold">First Name</label>
+            <label class="font-weight-bold">First name</label>
           </div>
           <div class="col">
             <input
@@ -21,7 +21,7 @@
               type="text"
               [(ngModel)]="searchText"
               pInputText
-              placeholder="search by first name"
+              placeholder="Search by first name"
               (keydown)="onKeydown($event)"
             />
           </div>
@@ -39,7 +39,7 @@
           "
         >
           <div class="col-4 d-flex align-items-center">
-            <label class="font-weight-bold">Last Name</label>
+            <label class="font-weight-bold">Last name</label>
           </div>
           <div class="col">
             <input
@@ -47,7 +47,7 @@
               type="text"
               [(ngModel)]="searchLastText"
               pInputText
-              placeholder="search by last name"
+              placeholder="Search by last name"
               (keydown)="onKeydown($event)"
             />
           </div>
@@ -73,7 +73,7 @@
               type="text"
               [(ngModel)]="searchEmailText"
               pInputText
-              placeholder="search by email"
+              placeholder="Search by email"
               (keydown)="onKeydown($event)"
               (ngModelChange)="onKeydown($event)"
 
@@ -95,7 +95,7 @@
           "
         >
           <div class="col-4 d-flex align-items-center">
-            <label class="font-weight-bold">User Type</label>
+            <label class="font-weight-bold">User type</label>
           </div>
           <div class="col-8">
             <p-dropdown
@@ -222,8 +222,8 @@
           </th>
 
           <th>Type</th>
-          <th>First Name</th>
-          <th>Last Name</th>
+          <th>First name</th>
+          <th>Last name</th>
           <th>Institution | Country</th>
           <th>Telephone</th>
           <th>Mobile</th>
